--- a/customconfig.properties
+++ b/customconfig.properties
@@ -1,5 +1,5 @@
 server.port=8081
 
-project.name=Spring Boot Application1234
+project.name=Spring Boot Applicationedited
 
 management.endpoints.web.exposure.include=*
