--- a/customconfig.properties
+++ b/customconfig.properties
@@ -3,3 +3,21 @@ server.port=8081
 project.name=Spring Boot Application one edited/refreshed
 
 management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:oracle:thin@localhost:1521:XE
+spring.datasource.username=system 
+spring.datasource.password=system
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+
+spring.datasource.platform=oracle
+spring.datasource.schema=schema-oracle.sql
+spring.datasource.data=data-oracle.sql
+spring.datasource.initialization-mode=always
+
+spring.datasource.hikari.connection-timeout=60000
+
+spring.datasource.hikari.maximum-pool-size=5
+
+
+
