--- a/customconfig.properties
+++ b/customconfig.properties
@@ -4,7 +4,7 @@ project.name=Spring Boot Application one edited/refreshed
 
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url=jdbc:oracle:thin@localhost:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system 
 spring.datasource.password=system
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
